[gd_scene load_steps=22 format=3 uid="uid://dftikvdb281b7"]

[ext_resource type="Texture2D" uid="uid://c8vvtn0hssca4" path="res://scenes/wizard_enemy/wizard.png" id="1_q6gvo"]
[ext_resource type="Script" path="res://scenes/wizard_enemy/wizard_enemy.gd" id="1_ujcdq"]
[ext_resource type="PackedScene" uid="uid://d2nmrbfr4hh6e" path="res://scenes/components/health_component.tscn" id="2_55625"]
[ext_resource type="PackedScene" uid="uid://dkapmlm0pe6sr" path="res://scenes/components/death_component.tscn" id="2_c27ma"]
[ext_resource type="PackedScene" uid="uid://4t5hr05abon7" path="res://scenes/components/velocity_component.tscn" id="2_ombrx"]
[ext_resource type="PackedScene" uid="uid://phrn6ti4ye0m" path="res://scenes/components/vial_drop_component.tscn" id="4_2pk1k"]
[ext_resource type="PackedScene" uid="uid://dwjj1nkluj12q" path="res://scenes/components/hurt_box_component.tscn" id="4_nh8fi"]
[ext_resource type="PackedScene" uid="uid://dfslbfkvoa0vl" path="res://scenes/components/hit_flash_component.tscn" id="5_jgcjh"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="6_1yoo4"]
[ext_resource type="PackedScene" uid="uid://mbq6npq78aqi" path="res://scenes/components/random_stream_player_component.tscn" id="8_hq3el"]
[ext_resource type="AudioStream" uid="uid://dw1ao888milng" path="res://assets/audio/footstep_carpet_000.ogg" id="9_puu1c"]
[ext_resource type="AudioStream" uid="uid://bvatwm1fy1nya" path="res://assets/audio/footstep_carpet_001.ogg" id="10_ngts2"]
[ext_resource type="AudioStream" uid="uid://c4b4j6bhkc3ik" path="res://assets/audio/footstep_carpet_002.ogg" id="11_5o1em"]
[ext_resource type="AudioStream" uid="uid://d1ttc8owoj5eh" path="res://assets/audio/footstep_carpet_003.ogg" id="12_b4f8k"]
[ext_resource type="AudioStream" uid="uid://bsi5vy7lbwgwi" path="res://assets/audio/footstep_carpet_004.ogg" id="13_rp65f"]

[sub_resource type="Animation" id="Animation_4l8o0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_spn7q"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.261799]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3375),
"transitions": PackedFloat32Array(1, 1, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1.5, 0.8), Vector2(0.9, 1.1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.05, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_is_moving"
}, {
"args": [false],
"method": &"set_is_moving"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_calma"]
_data = {
"RESET": SubResource("Animation_4l8o0"),
"walk": SubResource("Animation_spn7q")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_714o8"]
resource_local_to_scene = true
shader = ExtResource("6_1yoo4")
shader_parameter/lerp_percent = 0.1

[sub_resource type="CircleShape2D" id="CircleShape2D_1w1nj"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lmg87"]
radius = 4.0

[node name="WizardEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_ujcdq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_calma")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_55625")]
max_health = 30.0

[node name="VelocityComponent" parent="." instance=ExtResource("2_ombrx")]
max_speed = 60
acceleration = 20.0

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_2pk1k")]
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_jgcjh")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_714o8")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("2_c27ma")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomPlayerComponent" parent="." instance=ExtResource("8_hq3el")]
stream = ExtResource("9_puu1c")
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("9_puu1c"), ExtResource("10_ngts2"), ExtResource("11_5o1em"), ExtResource("12_b4f8k"), ExtResource("13_rp65f")])

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_q6gvo")
offset = Vector2(2.08165e-12, -8)

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_nh8fi")]
position = Vector2(0, -7)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
visible = false
shape = SubResource("CircleShape2D_1w1nj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_lmg87")
